recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: type mismatch;
 found   : List[Int]
 required: Int
     return(l.tail);
              ^