recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
   if (n==1){
     return(l.tail);
   }else{
     return(nth(l.tail,n-1));
  }
}